--- a/intl.zh-CN/用户指南/日志管理/管理健康检查日志.md
+++ b/intl.zh-CN/用户指南/日志管理/管理健康检查日志.md
@@ -24,7 +24,7 @@
 2.  开通OSS服务后，登录OSS管理控制台。
 3.  单击**新建Bucket**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/2444_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/15421813902444_zh-CN.png)
 
 4.  在新建Bucket对话框，配置Bucket信息，单击**确定**。
 
@@ -41,50 +41,43 @@
 2.  单击**第一步：开通OSS**。
 3.  开通后，返回健康检查日志页面，然后单击第二步：RAM角色授权区域内的**立即前往**。
 4.  阅读授权内容后，单击**同意授权**。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/2448_zh-CN.png)
-
 5.  登录访问控制管理控制台。
 6.  在左侧导航栏，单击**角色管理**，找到名称为SLBLogDefaultRole的角色，然后单击**授权**。
 7.  在编辑角色授权策略对话框，选择**AliyunOSSFullAccess**，然后单击**确定**完成授权。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/2449_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/15421813902449_zh-CN.png)
 
     授权完成后，单击**SLBLogDefaultRole**，然后单击**角色授权策略**，查看授权策略。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/2450_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/15421813902450_zh-CN.png)
 
 
 ## 步骤三 设置日志存储 {#section_bhz_4g4_vdb .section}
 
-1.  登录[负载均衡控制台](https://partners-intl.aliyun.com/login-required#/slb)。
-2.  在左侧导航栏，单击**日志管理** \> **健康检查日志** 。
+1.  登录[负载均衡控制台](https://slb.console.aliyun.com/slb)。
+2.  在左侧导航栏，选择**日志管理** \> **健康检查日志** 。
 3.  在健康检查日志页面，单击**日志存储**页签。
 4.  单击目标地域的**设置日志存储**链接。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/2452_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15683/15421813907333_zh-CN.png)
 
-5.  在设置日志存储对话框，选择用来存储健康检查日志的Bucket，然后单击**确认**。
-6.  单击状态栏下的开关，开启日志存储。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/2454_zh-CN.png)
-
+5.  在设置日志存储对话框，选择用来存储健康检查日志的Bucket，然后单击**确定**。
+6.  拖动状态栏下的开关，开启日志存储。
 
 ## 查看健康检查日志 {#section_ocw_5h4_vdb .section}
 
 您可以在负载均衡管理控制台，查看三天内的健康检查日志。
 
-1.  登录[负载均衡控制台](https://slbnew.console.aliyun.com/#/list/cn-hangzhou)。
-2.  登录[负载均衡控制台](https://partners-intl.aliyun.com/login-required#/slb)。
-3.  在左侧导航栏，单击**日志管理** \> **健康检查日志**。
-4.  在健康检查日志页面，单击**日志查看**页签。
+1.  登录[负载均衡控制台](https://slb.console.aliyun.com/slb)。
+2.  在左侧导航栏，选择**日志管理** \> **健康检查日志**。
+3.  在健康检查日志页面，单击**日志查看**页签。
 
     **说明：** 只有检查到后端ECS出现异常时，才会生成健康检查日志。健康检查日志每小时生成一次，若该小时内后端ECS未检测到异常，则无健康检查日志。
 
     -   当健康检查日志的信息为`SLB_instance_IP:port to Added_ECS_instance_IP:port abnormal; cause:XXX`时，代表后端ECS实例健康检查异常，您可以根据提示的异常原因进行排查。
     -   当健康检查日志的信息为`SLB_instance_IP:port to Added_ECS_instance_IP:port normal`时，代表后端ECS实例恢复正常。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/2458_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15683/15421813907334_zh-CN.png)
 
 
 ## 下载健康检查日志 {#section_iqd_k34_vdb .section}
@@ -95,12 +88,12 @@
 2.  在概览页面，单击目标Bucket，然后单击**文件管理**。
 3.  在文件管理页面，单击健康检查日志文件夹AliyunSLBHealthCheckLogs/。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/2459_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/15421813902459_zh-CN.png)
 
 4.  单击您要下载的健康检查日志的文件夹。
 5.  单击目标文件的**管理**，然后单击**复制文件 URL**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/2460_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4149/15421813902460_zh-CN.png)
 
 6.  在浏览器中输入复制的URL，下载日志文件。
 
