--- a/intl.zh-CN/用户指南/日志管理/配置访问日志.md
+++ b/intl.zh-CN/用户指南/日志管理/配置访问日志.md
@@ -6,11 +6,14 @@
 
 负载均衡的访问日志功能收集了所有发送到负载均衡的请求的详细信息，包括请求时间、客户端IP地址、延迟、请求路径和服务器响应等。负载均衡作为公网访问入口，承载着海量的访问请求，您可以通过访问日志分析客户端用户行为、了解客户端用户的地域分布、进行问题排查等。
 
-在开启负载均衡访问日志后，您可以将访问日志存储在日志服务的日志库（Logstore）中，采集分析访问日志。您可以随时删除访问日志的配置。
+在开启负载均衡访问日志后，您可以将访问日志存储在日志服务（SLS）的日志库（Logstore）中，采集分析访问日志。您可以随时删除访问日志的配置。
 
-负载均衡访问日志无需额外付费，您仅需要支付日志服务的费用。如果您将日志存储在OSS上，可以通过一些方式节省存储成本。
+负载均衡访问日志无需额外付费，您仅需要支付日志服务的费用。
 
-**说明：** 只有七层负载均衡支持访问日志功能，全部地域都已经开放访问日志功能。
+**说明：** 
+
+-   只有七层负载均衡支持访问日志功能，全部地域都已经开放访问日志功能。
+-   确保HTTP header的值不包含`||`，否则有可能会造成导出的日志分割错位。
 
 ## 负载均衡访问日志优势 {#section_jzd_pls_vdb .section}
 
@@ -42,44 +45,23 @@
 
 完成以下操作，配置访问日志：
 
-1.  登录[负载均衡管理控制台](https://slbnew.console.aliyun.com/?)。
-2.  在左侧导航栏，单击**日志管理** \> **访问日志** 。
-3.  单击**立即授权**，然后在弹出的对话框，单击**同意授权**授权SLB访问日志服务。
+1.  登录[负载均衡管理控制台](https://slb.console.aliyun.com)。
+2.  在左侧导航栏，选择**日志管理** \> **访问日志** 。
+3.  选择实例的所属地域。
+4.  单击**立即授权**，然后在弹出的对话框，单击**同意授权**授权SLB访问日志服务。
 
-    **说明：** 如果您使用的是子账号，需要主账号进行授权。详情参见[授权子账号使用访问日志](intl.zh-CN/用户指南/日志管理/授权子账号使用访问日志.md#)。
+    如果您使用的是子账号，需要主账号进行授权。详情参见[授权子账号使用访问日志](intl.zh-CN/历史文档/用户指南（旧版控制台）/日志管理/授权子账号使用访问日志.md#)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2474_zh-CN.png)
+    **说明：** 该操作只有首次配置时需要。
 
-4.  在访问日志页面，找到目标SLB实例，然后单击**设置**。
+5.  在访问日志页面，找到目标SLB实例，然后单击**设置**。
+6.  选择日志服务Project和日志库（LogStore），然后单击**确认**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2475_zh-CN.png)
+    如果没有可用的LogStore，单击**前往SLS创建Store**。
 
-5.  选择日志服务Project和日志库（Logstore），然后单击**确认**。
+    **说明：** 确保Project的名称全局唯一，且Project的地域和负载均衡实例的地域相同。
 
-    如果没有可用的Logstore，单击**立即创建**。确保Project的名称全局唯一。
-
-    **说明：** 确保Project的地域和负载均衡实例的地域相同。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2476_zh-CN.png)
-
-6.  配置数据接入：
-    1.  您可以在配置完日志库后，单击**数据接入向导**链接根据向导进行配置，也可以单击**确认**，然后在日志服务控制台配置。本操作选择直接通过数据接入向导配置。
-
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2479_zh-CN.png)
-
-    2.  单击**下一步**。
-
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2480_zh-CN.png)
-
-    3.  日志服务已预设了SLB所需的查询索引，单击**下一步**。
-
-        **说明：** 开启索引后，日志服务会根据索引流量收取费用。
-
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2482_zh-CN.png)
-
-    4.  单击**确认**完成数据接入。
-
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2483_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15681/15421814237478_zh-CN.png)
 
 
 ## 查询、分析访问日志 {#section_od1_l4s_vdb .section}
@@ -111,28 +93,28 @@
 
         在访问日志页面，单击**查看日志**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2484_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15681/15421814237479_zh-CN.png)
 
     -   日志服务控制台
 
         在日志库页面，单击SLB日志库的**查询**选项。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2492_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15681/154218142312838_zh-CN.png)
 
 2.  单击目标日志字段，查看对应的日志信息。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2493_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15681/154218142312857_zh-CN.png)
 
 3.  输入SQL语句查询特定的访问日志。
 
-    比如输入如下SQL语句查询Top20的客户端。
+    比如输入如下SQL语句查询Top20的客户端，用于分析请求访问来源，辅助商业决策。
 
     ```
     * | select ip_to_province(client_ip) as client_ip_province, count(*) as pv group by
           client_ip_province order by pv desc limit 50
     ```
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2494_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/15421814232494_zh-CN.png)
 
 
 ## 分析访问日志 {#section_cvs_xps_vdb .section}
@@ -142,23 +124,21 @@
 完成以下操作，分析访问日志：
 
 1.  在日志服务控制台，单击负载均衡的Project链接。
-2.  在左侧导航栏，单击**Search/Analytics - 查询分析** \> **仪表盘** ，然后单击**查看**。
+2.  在左侧导航栏，单击**Search/Analytics - 查询分析** \> **仪表盘** ，然后单击访问日志的名称。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2495_zh-CN.png)
-
-    您可以通过仪表盘查看TOP客户端、TOP Host、状态码PV等信息。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2496_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15681/154218142312867_zh-CN.png)
 
 
 ## 关闭访问日志 {#section_vgd_kqs_vdb .section}
 
 完成以下操作，关闭访问日志：
 
-1.  登录[负载均衡管理控制台](https://slbnew.console.aliyun.com/?)。
+1.  登录[负载均衡管理控制台](https://slb.console.aliyun.com)。
 2.  在左侧导航栏，单击**日志管理** \> **访问日志** 。
-3.  找到目标负载均衡实例，然后单击**删除**关闭日志访问功能。
+3.  选择实例的所属地域。
+4.  在访问日志页面，找到目标实例，然后单击**删除**关闭日志访问功能。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4150/2497_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15681/15421814237480_zh-CN.png)
 
+5.  在弹出的对话框中，单击**确定**。
 
