--- a/cn.zh-CN/用户指南/访问控制/设置访问控制.md
+++ b/cn.zh-CN/用户指南/访问控制/设置访问控制.md
@@ -2,7 +2,7 @@
 
 负载均衡提供监听级别的访问控制。您可以针对不同的监听设置访问白名单或黑名单。
 
-您可以在创建监听时配置访问控制，详情参见[配置七层监听](intl.zh-CN/用户指南/监听/七层监听/配置七层监听.md#)和[配置四层监听](intl.zh-CN/用户指南/监听/四层监听/配置四层监听.md#)。您也可以在监听创建后修改或重新配置访问控制。
+您可以在创建监听时配置访问控制，也可以在监听创建后修改或重新配置访问控制。
 
 本文介绍如何在监听创建后，配置访问控制。
 
@@ -10,17 +10,20 @@
 
 在开启访问控制前，确保：
 
--   已经创建访问控制策略，详情参见[配置访问控制策略组](intl.zh-CN/用户指南/访问控制/配置访问控制策略组.md#)。
+-   已经创建访问控制策略，详情参见[配置访问控制策略组](intl.zh-CN/历史文档/用户指南（旧版控制台）/访问控制/配置访问控制策略组.md#)。
 -   已经创建监听。
 
-完成以下操作，开启访问控制前：
+完成以下操作，开启访问控制：
 
-1.  登录[负载均衡管理控制台](http://slbnew.console.aliyun.com/#/list/cn-beijing)。
-2.  选择目标负载均衡实例的所属地域。
-3.  单击需要设置访问控制的负载均衡实例的ID。
-4.  选择**监听**页签。
-5.  选择目标监听**操作**列的**管理** \> **设置访问控制** 。
-6.  在弹出的对话框中，开启访问控制，然后选择访问控制方式和访问控制策略组，单击**确认**。
+1.  登录[负载均衡管理控制台](https://slb.console.aliyun.com/slb)。
+2.  选择实例的所属地域。
+3.  单击需要设置访问控制的实例ID。
+4.  在实例详情页面，单击**监听**页签。
+5.  找到目标监听，单击**更多** \> **设置访问控制** 。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15686/15421814457481_zh-CN.png)
+
+6.  在访问控制设置页面，开启访问控制，然后选择访问控制方式和访问控制策略组，单击**确定**。
     -   **白名单**：仅转发来自所选访问控制策略组中设置的IP地址或地址段的请求，白名单适用于应用只允许特定IP访问的场景。
 
         设置白名单存在一定业务风险。一旦设置白名单，就只有白名单中的IP可以访问负载均衡监听。如果开启了白名单访问，但访问策略组中没有添加任何IP，则负载均衡监听会转发全部请求。
@@ -34,10 +37,10 @@
 
 完成以下操作，关闭访问控制前：
 
-1.  登录[负载均衡管理控制台](http://slbnew.console.aliyun.com/#/list/cn-beijing)。
-2.  选择目标负载均衡实例的所属地域。
-3.  单击需要设置访问控制的负载均衡实例的ID。
-4.  选择**监听**页签。
-5.  选择目标监听**操作**列的**管理** \> **设置访问控制** 。
-6.  在弹出的对话框中，关闭访问控制。
+1.  登录[负载均衡管理控制台](https://slb.console.aliyun.com/slb)。
+2.  选择实例的所属地域。
+3.  单击需要设置访问控制的实例ID。
+4.  在实例详情页面，单击**监听**页签。
+5.  找到目标监听，单击**更多** \> **设置访问控制** 。
+6.  在访问控制设置页面，关闭访问控制，然后单击**确定**。
 
