--- a/intl.zh-CN/用户指南/多可用区.md
+++ b/intl.zh-CN/用户指南/多可用区.md
@@ -14,9 +14,9 @@
 -   正常情况下，备可用区的SLB实例处于待机状态。您不可以手动切换SLB实例的主备工作状态，只有当阿里云检测到整个可用区不可用时如如机房整体断电、机房出口光缆中断等，负载均衡才会切换到备可用区。而并非某个实例出现故障，就切换到备可用区。
 -   SLB和ECS是不同的集群。可用区A的SLB不可用时，ECS并不一定不可用，因此如果仅因为SLB集群故障导致的SLB主备倒换，备可用区的SLB依然可以将流量分发至不同可用区的ECS。但当整个可用区的所有集群断电或光缆中断时，那么可用区的所有服务（包括但不限于SLB、ECS等）就都无法正常工作了。
 
-更多信息，参见[负载均衡高可用最佳实践](../../../../intl.zh-CN/最佳实践/负载均衡高可用最佳实践.md#)。
+更多信息，参见[负载均衡高可用最佳实践](../intl.zh-CN/扩展阅读/最佳实践/高可用最佳实践.md#)。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4155/2835_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4155/15421815042835_zh-CN.png)
 
 ## 主备可用区列表 {#section_ml2_ykb_wdb .section}
 
