--- a/intl.zh-CN/用户指南/多可用区.md
+++ b/intl.zh-CN/用户指南/多可用区.md
@@ -16,7 +16,7 @@
 
 更多信息，参见[负载均衡高可用最佳实践](../intl.zh-CN/扩展阅读/最佳实践/高可用最佳实践.md#)。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4155/15421815042835_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4155/15428534592835_zh-CN.png)
 
 ## 主备可用区列表 {#section_ml2_ykb_wdb .section}
 
@@ -48,7 +48,11 @@
 |可用区D|可用区A|
 |华北3|单可用区|可用区A|可用区A|
 |华北5|单可用区|可用区A|可用区A|
-|欧洲中部1|单可用区|可用区A|可用区A|
+|欧洲中部1|多可用区|**主可用区**|**备可用区**|
+|可用区B|可用区A|
+|英国|多可用区|**主可用区**|**备可用区**|
+|可用区A|可用区A|
+|可用区B|可用区B|
 |中东东部1|单可用区|可用区A|可用区A|
 |新加坡|多可用区|**主可用区**|**备可用区**|
 |可用区A|可用区B|
