--- a/cn.zh-CN/新功能发布记录/新功能发布记录.md
+++ b/cn.zh-CN/新功能发布记录/新功能发布记录.md
@@ -2,27 +2,23 @@
 
 |功能概述|发布时间|发布地域|支持协议|相关文档|
 |:---|:---|:---|:---|:---|
+|配置监听转发（redirect）|2018-11-20|全部| HTTP监听
+
+ |[负载均衡SLB支持监听转发（redirect）功能](../../../../intl.zh-CN/用户指南/监听/配置监听转发（redirect）.md#)|
 |后端服务器支持添加ECS弹性网卡ENI（控制台）|2018-10-26|全部|HTTPS监听HTTP监听
 
 UDP监听
 
 TCP监听
 
-|[负载均衡SLB挂载弹性网卡ENI](http://icms.alibaba-inc.com/document/content/5266?topic=24484)|
-|包年包月实例短时升配|2018-10-26|全部|HTTPS监听HTTP监听
-
-UDP监听
-
-TCP监听
-
-|[包年包月实例短时升配](http://icms.alibaba-inc.com/document/content/5266?topic=24483)|
+|[后端服务器支持添加ECS弹性网卡ENI](../../../../intl.zh-CN/用户指南/后端服务器/后端服务器支持添加ECS弹性网卡ENI.md#)|
 |支持使用阿里云SSL证书服务中签发或托管的证书|2018-09-12|全部|HTTPS监听HTTP监听
 
 UDP监听
 
 TCP监听
 
-|[创建证书](http://icms.alibaba-inc.com/document/content/5266?topic=21331)|
+|[创建证书](../../../../intl.zh-CN/用户指南/证书管理/创建证书.md#)|
 |支持IPv6|2018-09-12|华北2地域的G和F可用区|HTTPS监听HTTP监听
 
 UDP监听
@@ -60,11 +56,7 @@ UDP监听
 TCP监听
 
 |[创建负载均衡实例](../../../../intl.zh-CN/用户指南/负载均衡实例/创建负载均衡实例.md#)|
-|支持一致性HASH算法（同时4层支持QUIC协议和UDP会话保持功能）|2018-07-18| 印度（孟买）
-
- 日本（东京）
-
- 新加坡
+|支持一致性HASH算法（同时4层支持QUIC协议和UDP会话保持功能）|2018-07-18| 日本（东京）
 
  澳大利亚（悉尼）
 
@@ -92,22 +84,13 @@ TCP监听
 |支持TLS版本自定义|2018-06-29|全部|HTTPS监听|[管理TLS安全策略](../../../../intl.zh-CN/用户指南/监听/管理TLS安全策略.md#)[添加HTTPS监听](../../../../intl.zh-CN/用户指南/监听/添加HTTPS监听.md#)
 
 |
-|支持IPv6|2018-06-15|华东1地域的E、F两个可用|HTTPS监听HTTP监听
+|支持IPv6|2018-06-15|华东1地域的E、F两个可用区|HTTPS监听HTTP监听
 
 UDP监听
 
 TCP监听
 
 |[创建IPv6实例](../../../../intl.zh-CN/用户指南/负载均衡实例/创建IPv6实例.md#)|
-|支持后付费转预付费功能|2018-06-07|全部| HTTPS监听
-
- HTTP监听
-
- UDP监听
-
- TCP监听
-
- |[按量付费实例变配](../../../../intl.zh-CN/用户指南/负载均衡实例/按量付费实例变配.md#)|
 |支持启用HTTP2.0|2018-05-21|全部|HTTPS监听|[添加HTTP监听](../../../../intl.zh-CN/用户指南/监听/添加HTTP监听.md#)[添加HTTPS监听](../../../../intl.zh-CN/用户指南/监听/添加HTTPS监听.md#)
 
 |
