--- a/cn.zh-CN/用户指南/负载均衡实例/性能保障型实例.md
+++ b/cn.zh-CN/用户指南/负载均衡实例/性能保障型实例.md
@@ -10,7 +10,7 @@
 
 把鼠标移至性能保障型实例的问号图标，可查看具体的性能指标，如下图所示。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15421805707175_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15432988567175_zh-CN.png)
 
 性能保障型实例的三个关键指标如下：
 
@@ -48,41 +48,33 @@
 
 **说明：** 负载均衡私网实例也可以选择性能共享型实例或性能保障型实例，性能保障型私网实例，也需要收取规格费用，收费方式与公网性能保障型实例一致，但不收取流量费/带宽费和实例费。
 
-负载均衡分为两种计费模式，预付费和按量付费。在不同的计费模式下，性能保障型实例的规格费收取规则不同：
+性能保障型实例规格费按使用量收取，即不论您选择的何种规格，实例规格规格费均会按照您实际使用的规格收取。
 
--   预付费模式
+例如，您选择了超强型I \(slb.s3.large\)规格（最大连接数1,000,000；CPS 500,000；QPS 50,000）。您的实例在某个小时内各项指标产生的实际峰值如下：
 
-    性能保障型实例规格费按照预付费模式收取，即在实例的付费周期内，实例规格费按照固定的价格收取。假设您选择的是高阶型I \(slb.s3.small\)规格，并且选择购买时长为3个月， 则规格费用 = slb.s3.small规格费月价 x 3月。
+|最大连接数|每秒新建连接数（CPS）|每秒查询数 （QPS）|
+|:----|:-----------|:----------|
+|90000|4000|11000|
 
--   按量付费模式
+-   从最大连接数维度看，90,000超过slb.s2.small规格中最大连接数50,000的上限，但未达到slb.s2.medium规格中最大连接数的100,000上限，因此从最大连接数维度计算，该小时规格为slb.s2.medium。
+-   从每秒新建连接数（CPS）维度看，4,000超过slb.s1.small规格中CPS 3,000的上限，但未到达slb.s2.small规格中CPS 5,000的上限，因此从CPS维度计算，该小时规格为slb.s2.small。
+-   从每秒查询数（QPS）维度看，11,000超过slb.s2.medium规格中QPS 10,000的上限，但未达到slb.s3.small中QPS 20,000的上限，因此从QPS维度计算，该小时规格为slb.s3.small。
 
-    性能保障型实例规格费按使用量收取，即不论您选择的何种规格，实例规格规格费均会按照您实际使用的规格收取。
+    综合以上三个维度，QPS指标的规格（slb.s3.small）最大，因此将QPS维度的规格作为该小时实例的综合规格，该小时内该实例将按照slb.s3.small规格进行计费。
 
-    例如，您选择了超强型I \(slb.s3.large\)规格（最大连接数1,000,000；CPS 500,000；QPS 50,000）。您的实例在某个小时内各项指标产生的实际峰值如下：
 
-    |最大连接数|每秒新建连接数（CPS）|每秒查询数 （QPS）|
-    |:----|:-----------|:----------|
-    |90000|4000|11000|
+以后每小时规格费均按照上述方式计算，如下图所示：
 
-    -   从最大连接数维度看，90,000超过slb.s2.small规格中最大连接数50,000的上限，但未达到slb.s2.medium规格中最大连接数的100,000上限，因此从最大连接数维度计算，该小时规格为slb.s2.medium。
-    -   从每秒新建连接数（CPS）维度看，4,000超过slb.s1.small规格中CPS 3,000的上限，但未到达slb.s2.small规格中CPS 5,000的上限，因此从CPS维度计算，该小时规格为slb.s2.small。
-    -   从每秒查询数（QPS）维度看，11,000超过slb.s2.medium规格中QPS 10,000的上限，但未达到slb.s3.small中QPS 20,000的上限，因此从QPS维度计算，该小时规格为slb.s3.small。
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4113/15432988562301_zh-CN.png)
 
-        综合以上三个维度，QPS指标的规格（slb.s3.small）最大，因此将QPS维度的规格作为该小时实例的综合规格，该小时内该实例将按照slb.s3.small规格进行计费。
-
-    以后每小时规格费均按照上述方式计算，如下图所示：
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4113/15421805702301_zh-CN.png)
-
-    因此，按量付费的性能保障型实例具有自动弹性伸缩（或计费）的能力。您在购买时所选的规格，是性能的上限，比如您选择高阶型II \(slb.s3.medium\)，那么意味着，您的实例最大可以达到的规格上限就是高阶型II \(slb.s3.medium\)。
-
+因此，按量付费的性能保障型实例具有自动弹性伸缩（或计费）的能力。您在购买时所选的规格，是性能的上限，比如您选择高阶型II \(slb.s3.medium\)，那么意味着，您的实例最大可以达到的规格上限就是高阶型II \(slb.s3.medium\)。
 
 ## 3. 性能保障型实例规格费的定价 {#section_n5z_s1n_vdb .section}
 
-下表中所列的只是规格费用。除规格费以外，负载均衡实例的实例费和流量/带宽费正常收取。更多详细信息，参考[计费说明](../cn.zh-CN/产品定价/按量计费.md#)。
+下表中所列的只是规格费用。除规格费以外，负载均衡实例的实例费和流量正常收取。更多详细信息，参考[按量计费](../intl.zh-CN/产品定价/按量计费.md#)。
 
-|地域|规格|规格|最大连接数|每秒新建连接数 \(CPS\)|每秒查询数\(QPS\)|包年包月\(元/月\)|按量付费\(元/时\)|
-|:-|:-|:-|:----|:--------------|:-----------|:----------|:----------|
+|地域|规格|最大连接数|每秒新建连接数 \(CPS\)|每秒查询数\(QPS\)|规格费（美元/小时）|
+|:-|:-|:----|:--------------|:-----------|:---------|
 | 华东1（杭州）
 
  华北3（张家口）
@@ -97,12 +89,12 @@
 
  华南1（深圳\)
 
- |规格 1|简约型I \(slb.s1.small\)|5,000|3,000|1,000|免费|免费|
-|规格 2|标准型I \(slb.s2.small\)|50,000|5,000|5,000|190.00|0.32|
-|规格 3|标准型II \(slb.s2.medium\)|100,000|10,000|10,000|380.00|0.63|
-|规格 4|高阶型I \(slb.s3.small\)|200,000|20,000|20,000|760.00|1.27|
-|规格 5|高阶型II \(slb.s3.medium\)|500,000|50,000|30,000|1,143.00|1.91|
-|规格 6|超强型I \(slb.s3.large\)|1,000,000|100,000|50,000|1,908.00|3.18|
+ |规格1：简约型I \(slb.s1.small\)|5000|3000|1000|免费|
+|规格2：标准型I \(slb.s2.small\)|50,000|5,000|5,000|0.05|
+|规格3：标准型II \(slb.s2.medium\)|100,000|10,000|10,000|0.10|
+|规格4：高阶型I \(slb.s3.small\)|200,000|20,000|20,000|0.20|
+|规格5：高阶型II \(slb.s3.medium\)|500,000|50,000|30,000|0.31|
+|规格6：超强型I \(slb.s3.large\)|1,000,000|100,000|50,000|0.51|
 | 亚太东南1（新加坡）
 
  亚太东南3（吉隆坡）
@@ -117,54 +109,32 @@
 
  香港
 
- |规格 1|简约型I \(slb.s1.small\)|5,000|3,000|1,000|免费|免费|
-|规格 2|标准型I \(slb.s2.small\)|50,000|5,000|5,000|228.00|0.38|
-|规格 3|标准型II \(slb.s2.medium\)|100,000|10,000|10,000|456.00|0.76|
-|规格 4|高阶型I \(slb.s3.small\)|200,000|20,000|20,000|912.00|1.52|
-|规格 5|高阶型II \(slb.s3.medium\)|500,000|50,000|30,000|1,372.00|2.29|
-|规格 6|超强型I \(slb.s3.large\)|1,000,000|100,000|50,000|2,290.00|3.82|
+ |规格1：简约型I \(slb.s1.small\)|5,000|3,000|1,000|免费|
+|规格2：标准型I \(slb.s2.small\)|50,000|5,000|5,000|0.06|
+|规格3：标准型II \(slb.s2.medium\)|100,000|10,000|10,000|0.12|
+|规格4：高阶型I \(slb.s3.small\)|200,000|20,000|20,000|0.24|
+|规格5：高阶型II \(slb.s3.medium\)|500,000|50,000|30,000|0.37|
+|规格6：超强型I \(slb.s3.large\)|1,000,000|100,000|50,000|0.61|
 
 ## 4. 如何选择性能保障型实例？ {#section_ifx_kcn_vdb .section}
 
--   如果您购买的是按量付费实例，如上文所描述，规格费是按量（弹性）计费的，因此建议您直接选择您可以买到的最大规格，对于大多数用户而言，即高阶型I\(slb.s3.large\)，这样可以保证较好的业务灵活性（弹性），且不会让您额外多付出成本。但如果您认为您的业务量不太可能到达超强型I\(slb.s3.large），也可以设置一个合理的弹性上限，比如高阶型II\(slb.s3.medium\)。
--   如果您购买的是预付费实例，情况会略微复杂一点。因为规格费按照固定费率恒定收取，而您不希望购买一个超出您实际业务量很多的规格，并因此付出不必要的成本，因此您需要评估您的实际业务量，并合理的考虑一些冗余，然后选择一个较合适的规格，对于业务量评估来说，主要参考下面几个原则：
-    -   如果是四层监听，关注的重点是长连接的并发连接数，那么最大（并发）连接数应当作为一个关键指标来参考。根据不同的业务场景，您需要预估一个负载均衡实例需要承载的最大并发连接数，并选择相应的规格。
-    -   如果是七层监听，关注的重点是QPS的性能，QPS决定了一个七层应用系统的吞吐量。同样，您也需要根据经验对QPS进行预估。在初步选定一个规格后，在业务压测和实测过程中对规格进行微调。
-    -   结合与性能保障型实例一起推出的其它关键监控指标，查看实际业务流量的走势、峰值情况，对性能规格进行更加精确的选取。更多详细信息，参考[监控数据](cn.zh-CN/历史文档/用户指南（旧版控制台）/监控/查看监控.md#)。
-
-        并发连接数监控示例
-
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15421805717340_zh-CN.png)
-
-        新建连接数监控示例
-
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15421805717341_zh-CN.png)
-
-        QPS监控示例
-
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15421805717342_zh-CN.png)
-
+规格费是按量（弹性）计费的，因此建议您直接选择您可以买到的最大规格，对于大多数用户而言，即高阶型I\(slb.s3.large\)，这样可以保证较好的业务灵活性（弹性），且不会让您额外多付出成本。但如果您认为您的业务量不太可能到达超强型I\(slb.s3.large），也可以设置一个合理的弹性上限，比如高阶型II\(slb.s3.medium\)。
 
 ## 5. 是否可以调整性能保障型实例的规格？ {#p7 .section}
 
 您可在控制台对性能保障型实例进行变配，如下图所示。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15421805717343_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15432988567343_zh-CN.png)
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15421805717344_zh-CN.png)
-
-按量付费的性能保障型实例的规格可以升配也可以降配，包年包月的性能保障型实例需要开通白名单才可以降配。详情参考[包年包月实例变配](cn.zh-CN/历史文档/用户指南（旧版控制台）/负载均衡实例/包年包月实例变配.md#)。
-
-因此，建议您先使用按量付费的实例进行业务测试，确认好规格后再购买所需规格的包年包月实例。
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15432988577344_zh-CN.png)
 
 **说明：** 
 
 -   将性能共享型实例变更为性能保障型实例后，无法再将其变更回性能共享型。
--   变更性能保障型实例规格时，如果同时变更计费方式\(按流量计费或按带宽计费\)，则规格变更需要到次日零点才能生效。如果仅仅是对实例规格进行变更，变更立即生效。建议您在变更规格时，尽量不要变更计费方式。
 -   由于历史存量原因，部分实例可能存在于较老的集群。此部分实例在变配到性能保障型实例时，因为需要将实例迁移，因此可能出现10-30秒的业务中断，其他变配操作均不会影响业务。因此建议在业务低谷期进行此类变配。
 -   所有的变配操作都不影响负载均衡实例的IP地址。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15421805717345_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15432988577345_zh-CN.png)
 
 ## 6. 性能保障型实例何时收费？ {#section_gvt_kfn_vdb .section}
 
@@ -202,8 +172,6 @@
 短木板原理。
 
 性能保障型实例并不保障三个指标（包含带宽指标）同时达到指定规格的指标上限。即规格中哪个指标先达到峰值，就以哪个指标开始限速。
-
-同样，如果购买了按带宽付费的实例，当实例带宽达到峰值上限时，也可能会出现因为带宽限速而导致某些指标达不到规格上限的情况。
 
 比如某用户选择高阶型I（slb.s3.small）实例，当实例的QPS已经达到20000，但并发连接数确远未达到20万，那么该实例最大连接数可能永远都不会达到规格上限，因为新建的连接请求会因为QPS达到上限而被丢弃。
 
