--- a/intl.zh-CN/用户指南/负载均衡实例/性能保障型实例.md
+++ b/intl.zh-CN/用户指南/负载均衡实例/性能保障型实例.md
@@ -2,56 +2,15 @@
 
 阿里云负载均衡计划将于2018年4月1日开始针对性能保障型实例收取规格费，同时继续保留性能共享型实例的售卖。
 
-性能保障型实例的规格费收取将按地域分批次生效：
-
--   第一批：
-
-    生效时间：4月1日至4月10日陆续生效
-
-    生效地域：亚太东南1（新加坡）、亚太东南3（吉隆坡）、亚太东南5（雅加达）、亚太南部1（孟买）、美国西部1（硅谷）、美国东部1（弗吉尼亚）
-
--   第二批：
-
-    生效时间：4月11日至4月20日陆续生效
-
-    生效地域：华东1（杭州）、华北3（张家口）、华北5（呼和浩特）、香港
-
--   第三批：
-
-    生效时间：4月21日至4月30日陆续生效
-
-    生效地域：华北1（青岛）、华北2（北京）、华东2（上海）、华南1（深圳）
-
-
-[1. 什么是负载均衡性能保障型实例？](#section_lht_gym_vdb)
-
-[2. 性能保障型实例如何收费？](#section_eth_yzm_vdb)
-
-[3. 性能保障型实例规格费的定价](#section_n5z_s1n_vdb)
-
-[4. 如何选择性能保障型实例？](#section_ifx_kcn_vdb)
-
-[5. 是否可以调整性能保障型实例的规格？](#section_dmb_q2n_vdb)
-
-[6. 性能保障型实例何时收费？](#section_gvt_kfn_vdb)
-
-[7. 收费后性能共享型实例会收费吗？](#section_hxl_pfn_vdb)
-
-[8. 为何有时性能保障型实例看起来达不到规格中的性能指标上限？](#section_ehc_vfn_vdb)
-
-[9. 还可以购买性能共享型实例吗？](#section_flq_wfn_vdb)
-
-[10. 私网负载均衡实例也会收取规格费吗？](#section_nfy_xfn_vdb)
-
 ## 1. 什么是负载均衡性能保障型实例？ {#section_lht_gym_vdb .section}
 
 负载均衡性能保障型实例提供了可保障的性能指标。与之相对的是负载均衡性能共享型实例，资源是所有实例共享的，所以不保障实例的性能指标。
 
 在推出负载均衡性能保障型实例之前，您所有购买的实例均为性能共享型实例。在控制台上，您可以查看已购实例的类型。
 
-把鼠标移至性能保障型实例的绿色图标，可查看具体的性能指标，如下图所示。
+把鼠标移至性能保障型实例的问号图标，可查看具体的性能指标，如下图所示。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4113/2294_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15432988567175_zh-CN.png)
 
 性能保障型实例的三个关键指标如下：
 
@@ -106,16 +65,16 @@
 
 以后每小时规格费均按照上述方式计算，如下图所示：
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4113/2301_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4113/15432988562301_zh-CN.png)
 
 因此，按量付费的性能保障型实例具有自动弹性伸缩（或计费）的能力。您在购买时所选的规格，是性能的上限，比如您选择高阶型II \(slb.s3.medium\)，那么意味着，您的实例最大可以达到的规格上限就是高阶型II \(slb.s3.medium\)。
 
 ## 3. 性能保障型实例规格费的定价 {#section_n5z_s1n_vdb .section}
 
-下表中所列的只是规格费用。除规格费以外，负载均衡实例的实例费和流量/带宽费正常收取。更多详细信息，参考[计费说明](../../../../intl.zh-CN/产品定价/按量计费.md#)。
+下表中所列的只是规格费用。除规格费以外，负载均衡实例的实例费和流量正常收取。更多详细信息，参考[按量计费](../intl.zh-CN/产品定价/按量计费.md#)。
 
-|地域|规格|规格|最大连接数|每秒新建连接数 \(CPS\)|每秒查询数\(QPS\)|包年包月\(元/月\)|按量付费\(元/时\)|
-|:-|:-|:-|:----|:--------------|:-----------|:----------|:----------|
+|地域|规格|最大连接数|每秒新建连接数 \(CPS\)|每秒查询数\(QPS\)|规格费（美元/小时）|
+|:-|:-|:----|:--------------|:-----------|:---------|
 | 华东1（杭州）
 
  华北3（张家口）
@@ -130,12 +89,12 @@
 
  华南1（深圳\)
 
- |规格 1|简约型I \(slb.s1.small\)|5,000|3,000|1,000|免费|免费|
-|规格 2|标准型I \(slb.s2.small\)|50,000|5,000|5,000|190.00|0.32|
-|规格 3|标准型II \(slb.s2.medium\)|100,000|10,000|10,000|380.00|0.63|
-|规格 4|高阶型I \(slb.s3.small\)|200,000|20,000|20,000|760.00|1.27|
-|规格 5|高阶型II \(slb.s3.medium\)|500,000|50,000|30,000|1,143.00|1.91|
-|规格 6|超强型I \(slb.s3.large\)|1,000,000|100,000|50,000|1,908.00|3.18|
+ |规格1：简约型I \(slb.s1.small\)|5000|3000|1000|免费|
+|规格2：标准型I \(slb.s2.small\)|50,000|5,000|5,000|0.05|
+|规格3：标准型II \(slb.s2.medium\)|100,000|10,000|10,000|0.10|
+|规格4：高阶型I \(slb.s3.small\)|200,000|20,000|20,000|0.20|
+|规格5：高阶型II \(slb.s3.medium\)|500,000|50,000|30,000|0.31|
+|规格6：超强型I \(slb.s3.large\)|1,000,000|100,000|50,000|0.51|
 | 亚太东南1（新加坡）
 
  亚太东南3（吉隆坡）
@@ -150,26 +109,24 @@
 
  香港
 
- |规格 1|简约型I \(slb.s1.small\)|5,000|3,000|1,000|免费|免费|
-|规格 2|标准型I \(slb.s2.small\)|50,000|5,000|5,000|228.00|0.38|
-|规格 3|标准型II \(slb.s2.medium\)|100,000|10,000|10,000|456.00|0.76|
-|规格 4|高阶型I \(slb.s3.small\)|200,000|20,000|20,000|912.00|1.52|
-|规格 5|高阶型II \(slb.s3.medium\)|500,000|50,000|30,000|1,372.00|2.29|
-|规格 6|超强型I \(slb.s3.large\)|1,000,000|100,000|50,000|2,290.00|3.82|
-
-目前海外地域规格费享83折优惠。
+ |规格1：简约型I \(slb.s1.small\)|5,000|3,000|1,000|免费|
+|规格2：标准型I \(slb.s2.small\)|50,000|5,000|5,000|0.06|
+|规格3：标准型II \(slb.s2.medium\)|100,000|10,000|10,000|0.12|
+|规格4：高阶型I \(slb.s3.small\)|200,000|20,000|20,000|0.24|
+|规格5：高阶型II \(slb.s3.medium\)|500,000|50,000|30,000|0.37|
+|规格6：超强型I \(slb.s3.large\)|1,000,000|100,000|50,000|0.61|
 
 ## 4. 如何选择性能保障型实例？ {#section_ifx_kcn_vdb .section}
 
 规格费是按量（弹性）计费的，因此建议您直接选择您可以买到的最大规格，对于大多数用户而言，即高阶型I\(slb.s3.large\)，这样可以保证较好的业务灵活性（弹性），且不会让您额外多付出成本。但如果您认为您的业务量不太可能到达超强型I\(slb.s3.large），也可以设置一个合理的弹性上限，比如高阶型II\(slb.s3.medium\)。
 
-## 5. 是否可以调整性能保障型实例的规格？ {#section_dmb_q2n_vdb .section}
+## 5. 是否可以调整性能保障型实例的规格？ {#p7 .section}
 
 您可在控制台对性能保障型实例进行变配，如下图所示。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4113/2324_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15432988567343_zh-CN.png)
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4113/2325_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15432988577344_zh-CN.png)
 
 **说明：** 
 
@@ -177,7 +134,7 @@
 -   由于历史存量原因，部分实例可能存在于较老的集群。此部分实例在变配到性能保障型实例时，因为需要将实例迁移，因此可能出现10-30秒的业务中断，其他变配操作均不会影响业务。因此建议在业务低谷期进行此类变配。
 -   所有的变配操作都不影响负载均衡实例的IP地址。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4113/2326_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15642/15432988577345_zh-CN.png)
 
 ## 6. 性能保障型实例何时收费？ {#section_gvt_kfn_vdb .section}
 
@@ -209,8 +166,6 @@
 不会。
 
 原有的性能共享型实例（如果您不将其变配性能保障型）将继续保持为性能共享型实例，不收取规格费。您也可以通过变配，将性能共享型实例升级成性能保障型实例。变更成性能保障型后，当性能保障型实例开始正式收费时，该实例将收取规格费。
-
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4113/2327_zh-CN.png)
 
 ## 8. 为何有时性能保障型实例看起来达不到规格中的性能指标上限？ {#section_ehc_vfn_vdb .section}
 
