--- a/cn.zh-CN/用户指南/负载均衡实例/包年包月实例短时升配.md
+++ b/cn.zh-CN/用户指南/负载均衡实例/包年包月实例短时升配.md
@@ -16,15 +16,16 @@
 -   在使用短时升配提升实例带宽后， 如果配置了监听带宽限速且调高了监听的带宽限速，在短时升配到期时，系统会自动删除监听上的带宽限制，所有监听共享实例带宽。
 -   在短时升配状态中，不可进行升配（或降配）操作，可以多次短时升配，但是第二次短时升配结束时间需要晚于第一次短时升配时间，建议短时升配时长不超过一个月。
 -   您的实例在短时升配到期后恢复到原有实例带宽/规格时，如果此时实例上业务流量超过实例原有带宽/规格的限制，可能出现限速从而导致流量被丢弃，请合理规划短时升配的到期时间，确保实例带宽/规格和业务需求匹配。
+-   仅负载均衡新版控制台支持短时升配功能。
 
 1.  登录[负载均衡管理控制台](https://slb.console.aliyun.com/slb/cn-hangzhou)。 
 2.  在左侧导航栏，单击**实例管理**。 
 3.  在实例管理页面，选择需要短时升配的实例**操作**列的**更多** \> **短时升配**。 
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/24483/154117163614307_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/24483/154329888814307_zh-CN.png)
 
 4.  在临时升配页面，修改实例规格、带宽值和还原时间，并完成支付。 
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/24483/154117163614308_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/24483/154329888814308_zh-CN.png)
 
 
