--- a/intl.zh-CN/扩展阅读/常见问题/负载均衡常见问题.md
+++ b/intl.zh-CN/扩展阅读/常见问题/负载均衡常见问题.md
@@ -29,7 +29,7 @@
 
 支持。
 
-负载均衡支持HTTP重定向至HTTPS即80端口跳转到443，详情参见[HTTP重定向至HTTPS](../../../../intl.zh-CN/历史文档/用户指南（旧版控制台）/监听/七层监听/HTTP重定向至HTTPS.md#)。
+详情参见[配置监听转发（redirect）](../../../../intl.zh-CN/用户指南/监听/配置监听转发（redirect）.md#)。
 
 ## 6. ping负载均衡的IP和ping负载均衡后端ECS的IP有什么区别？ {#section_qvm_s3x_wdb .section}
 
@@ -63,6 +63,11 @@ ping负载均衡的IP是由负载均衡集群响应，不会转发给后端的EC
 ## 11. 为什么请求不均衡？ {#section_wxp_cjx_wdb .section}
 
 负载均衡请求不均衡的原因可能有以下几种可能：
+
+-   ECS实例请求连接数较少。
+-   不同ECS实例的性能不同导致请求不均衡。
+
+    **说明：** ECS实例内存使用情况不能准确的判断请求转发是否均衡。
 
 -   开启了会话保持功能
 
@@ -110,7 +115,7 @@ ping负载均衡的IP是由负载均衡集群响应，不会转发给后端的EC
 
 负载均衡的监控数据和您的消费明细中的流量数据会有些差距，详情查看[监控数据与计量数据](../../../../intl.zh-CN/产品定价/监控数据与计量数据.md#)。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4286/15421822623190_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4286/15439792733190_zh-CN.png)
 
 ## 15. 为什么调用API修改带宽失败？ {#section_ldl_zkx_wdb .section}
 
