--- a/cn.zh-CN/用户指南/监听/管理扩展域名.md
+++ b/cn.zh-CN/用户指南/监听/管理扩展域名.md
@@ -20,7 +20,7 @@
 4.  在左侧导航栏，单击**监听**。
 5.  在监听页面，找到已创建的HTTPS监听，选择**更多** \> **扩展域名管理**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15661/15421809807466_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15661/15439817047466_zh-CN.png)
 
 6.  单击**添加扩展域名**，配置扩展域名：
     1.  输入域名。域名只能使用字母、数字、连字符（-）、点（.）。
@@ -46,11 +46,11 @@
 
     3.  单击**确定**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15661/15421809807467_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15661/15439817047467_zh-CN.png)
 
 7.  在监听页面，找到已创建的HTTPS监听，单击**添加转发策略**。
 8.  在转发策略页面，单击**添加转发策略**。
-9.  配置转发策略，详情参见[ZH-CN\_TP\_15660\_V1.md\#](intl.zh-CN/教程专区/基于域名__URL路径进行转发.md#)。
+9.  配置转发策略，详情参见[基于域名/URL路径进行转发](../../../../intl.zh-CN/教程专区/基于域名__URL路径进行转发.md#)。
 
     **说明：** 确保转发策略中配置的域名和您添加的扩展域名一致。
 
@@ -69,7 +69,7 @@
 6.  找到目标扩展域名，然后单击**编辑**。
 7.  在修改扩展域名对话框，选择新的证书，然后单击**确定**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15661/15421809807468_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15661/15439817047468_zh-CN.png)
 
 
 ## 删除扩展域名 {#section_htc_j1p_42b .section}
@@ -83,7 +83,7 @@
 5.  在监听页面，找到已创建的HTTPS监听，然后单击**更多** \> **扩展域名管理**。
 6.  找到目标扩展域名，然后单击**删除**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15661/15421809807469_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15661/15439817047469_zh-CN.png)
 
 7.  在弹出的对话框，单击**确定**。
 
