--- a/cn.zh-CN/扩展阅读/常见问题/如何使用负载均衡性能保障型实例？.md
+++ b/cn.zh-CN/扩展阅读/常见问题/如何使用负载均衡性能保障型实例？.md
@@ -10,7 +10,7 @@
 
 把鼠标移至性能保障型实例的绿色图标，可查看具体的性能指标，如下图所示。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15408849423277_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693277_zh-CN.png)
 
 性能保障型实例的三个关键指标如下：
 
@@ -72,7 +72,7 @@
 
     以后每小时规格费均按照上述方式计算，如下图所示：
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15408849423280_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693280_zh-CN.png)
 
     因此，按量付费的性能保障型实例具有自动弹性伸缩（或计费）的能力。您在购买时所选的规格，是性能的上限，比如您选择高阶型II \(slb.s3.medium\)，那么意味着，您的实例最大可以达到的规格上限就是高阶型II \(slb.s3.medium\)。
 
@@ -136,26 +136,26 @@
 
         并发连接数监控示例
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15408849423281_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693281_zh-CN.png)
 
         新建连接数监控示例
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15408849423282_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693282_zh-CN.png)
 
         QPS监控示例
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15408849423283_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693283_zh-CN.png)
 
 
 ## 5. 是否可以调整性能保障型实例的规格？ {#section_dmb_q2n_vdb .section}
 
 您可在控制台对性能保障型实例进行变配，如下图所示。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15408849423284_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693284_zh-CN.png)
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15408849423287_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887703287_zh-CN.png)
 
-按量付费的性能保障型实例的规格可以升配也可以降配，包年包月的性能保障型实例需要开通白名单才可以降配。详情参考[包年包月实例变配](intl.zh-CN/历史文档/用户指南（旧版控制台）/负载均衡实例/包年包月实例变配.md#)。
+按量付费的性能保障型实例的规格可以升配也可以降配。
 
 因此，建议您先使用按量付费的实例进行业务测试，确认好规格后再购买所需规格的包年包月实例。
 
@@ -166,7 +166,7 @@
 -   由于历史存量原因，部分实例可能存在于较老的集群。此部分实例在变配到性能保障型实例时，因为需要将实例迁移，因此可能出现10-30秒的业务中断，其他变配操作均不会影响业务。因此建议在业务低谷期进行此类变配，或通过[GSLB](https://promotion.aliyun.com/ntms/act/globalslb.html?spm=5176.71615.741495.1.307291894icRpB&wh_ttid=pc)来做实例间的负载均衡后，再进行变配。
 -   所有的变配操作都不影响负载均衡实例的IP地址。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15408849423288_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887703288_zh-CN.png)
 
 ## 6. 性能保障型实例何时收费？ {#section_gvt_kfn_vdb .section}
 
