--- a/intl.zh-CN/用户指南/证书管理/替换证书.md
+++ b/intl.zh-CN/用户指南/证书管理/替换证书.md
@@ -1,9 +1,9 @@
 # 替换证书 {#task_ayx_qqn_vdb .task}
 
-当证书过期，需要创建新的证书或添加证书报错时，您可以替换证书。
+为避免证书过期对您的服务产生影响，请在证书过期前替换证书。
 
-1.   新建并上传一个新的证书。 详情参见[生成证书](intl.zh-CN/用户指南/证书管理/生成证书.md#)和[上传证书](intl.zh-CN/用户指南/证书管理/上传证书.md#)。
-2.   在HTTPS监听中配置新的证书。 详情参见[配置HTTPS单向认证](intl.zh-CN/用户指南/监听/七层监听/配置HTTPS单向认证.md#)和[配置HTTPS双向认证](intl.zh-CN/用户指南/监听/七层监听/配置HTTPS双向认证.md#)。
+1.   新建并上传一个新的证书。 详情参见[生成CA证书](intl.zh-CN/用户指南/证书管理/生成CA证书.md#)和[上传证书](intl.zh-CN/用户指南/证书管理/上传证书.md#)。
+2.   在HTTPS监听中配置新的证书。 详情参见[添加HTTPS监听](intl.zh-CN/用户指南/监听/添加HTTPS监听.md#)。
 3.   打开证书管理页面，找到目标证书，然后单击**删除**。 
 4.   在弹出的对话框中，单击**确认**。 
 
