--- a/intl.zh-CN/历史文档/用户指南（旧版控制台）/负载均衡实例/创建实例.md
+++ b/intl.zh-CN/历史文档/用户指南（旧版控制台）/负载均衡实例/创建实例.md
@@ -6,9 +6,6 @@
 
 1.   登录[负载均衡管理控制台](https://slbnew.console.aliyun.com/#/list/cn-hangzhou)。 
 2.  在左侧导航栏，单击**实例管理**，然后单击左上角的**创建负载均衡**。 
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4115/15439948527380_zh-CN.png)
-
 3.   根据如下信息，配置负载均衡实例。 
 
     |配置|说明|
@@ -28,7 +25,7 @@
  不同的性能规格所提供的性能指标也不同，详情查看[如何使用性能保障型实例](../../../../intl.zh-CN/扩展阅读/常见问题/如何使用负载均衡性能保障型实例？.md#)。
 
  |
-    |**实例类型**|根据业务场景选择配置对外公开或对内私有的负载均衡服务，系统会根据您的选择分配公网或私网服务地址。更多详细信息，参考[ZH-CN\_TP\_16450.md\#](intl.zh-CN/历史文档/用户指南（旧版控制台）/负载均衡实例/什么是负载均衡实例.md#)。    -   公网：公网负载均衡实例仅提供公网IP，可以通过Internet访问负载均衡。
+    |**实例类型**|根据业务场景选择配置对外公开或对内私有的负载均衡服务，系统会根据您的选择分配公网或私网服务地址。更多详细信息，参考[什么是负载均衡实例](intl.zh-CN/历史文档/用户指南（旧版控制台）/负载均衡实例/什么是负载均衡实例.md#)。    -   公网：公网负载均衡实例仅提供公网IP，可以通过Internet访问负载均衡。
     -   私网：私网负载均衡实例仅提供阿里云私网IP，只能通过阿里云内部网络访问该负载均衡服务，无法从Internet访问。
 |
     |**IP版本**|选择**IPv4**。|
