--- a/cn.zh-CN/扩展阅读/常见问题/为什么请求不均衡.md
+++ b/cn.zh-CN/扩展阅读/常见问题/为什么请求不均衡.md
@@ -2,7 +2,7 @@
 
 ## 原因 {#section_jdz_lby_wdb .section}
 
-负载均衡请求不均衡的原因可能有以下几种可能：
+负载均衡请求不均衡可能有以下几种原因：
 
 -   ECS实例请求连接数较少。
 -   不同ECS实例的性能不同导致请求不均衡。
