--- a/intl.zh-CN/用户指南/负载均衡实例/网络流量路径说明.md
+++ b/intl.zh-CN/用户指南/负载均衡实例/网络流量路径说明.md
@@ -20,7 +20,7 @@
 
 -   如果ECS仅仅处理来自负载均衡的请求，可以不购买公网带宽（ECS公网IP/弹性公网IP/NAT网关等）。
 
-    如果ECS实例已经具有公网IP，但只处理来自负载均衡的请求，也不会产生费用。
+    **说明：** 早期存量ECS上直接分配了公网IP（ifconfig中可见接口上分配的公网ip地址），此类ECS如果仅通过SLB对外提供服务，即便在公网接口（网卡）上看到有流量统计，也不会产生ECS的公网费用。
 
 -   如果需要直接通过后端ECS对外提供服务，或后端ECS有访问外网的需求， 那么需要相应的配置或购买ECS公网IP/弹性公网IP/NAT网关等服务。
 
