--- a/intl.zh-CN/扩展阅读/故障排除/无法访问负载均衡.md
+++ b/intl.zh-CN/扩展阅读/故障排除/无法访问负载均衡.md
@@ -1,70 +1,82 @@
 # 无法访问负载均衡 {#concept_wzy_kyc_xdb .concept}
 
-当客户端无法访问负载均衡时，可能的原因和解决方案如下：
+提供通过客户端无法访问负载均衡的可能原因和处理方法。
 
-1.  如果您在创建负载均衡实例后，没有添加监听，此时负载均衡实例的服务地址是无法ping通的。
+**说明：** 本次示例中负载均衡前端端口是80，ECS 后端端口为80，ECS内网IP是10.11.192.1，无法访问负载均衡问题排查时，需要根据实际情况配置端口和内网IP信息。
 
-    解决方案：配置监听，详情查看[配置监听](../../../../intl.zh-CN/历史文档/用户指南（旧版控制台）/监听/监听介绍.md#)。
+|序号|可能原因|处理方法|
+|--|----|----|
+|1|后端服务器无法访问SLB，对于四层负载均衡服务，目前不支持负载均衡后端ECS实例直接为客户端提供服务的同时，又作为负载均衡的后端服务器。|-|
+|2|健康检查异常。|健康检查方法请参见[四层监听（TCP/UDP）健康检查异常排查](intl.zh-CN/扩展阅读/故障排除/四层监听（TCP__UDP）健康检查异常排查.md#)和[七层监听（HTTP/HTTPS）健康检查异常排查](intl.zh-CN/扩展阅读/故障排除/七层监听（HTTP__HTTPS）健康检查异常排查.md#)。|
+|3|通过SLB搭建FTP、tftp、h323、sip等均不支持使用主动模式。| -   如果是Linux系统，您可以尝试配置22端口的转发，使用sftp连接传输数据。
+-   支持通过EIP可见模式将EIP绑定到FTP服务器上对外提供FTP服务，配置详情请参见[使用EIP部署FTP服务器](../../../../intl.zh-CN/用户指南/使用EIP部署FTP服务器.md#)。
 
-2.  四层负载均衡后端Linux ECS内核配置错误。
+ |
+|4|服务器内网防火墙设置没有放行80端口。|可以选择执行如下命令，暂时关闭防火墙进行测试。-   Windows 服务器上运行：
 
-    四层负载均衡后端添加的Linux系统的ECS实例，必须关闭其Linux内核的rp\_filter特性。否则可能会导致无法从客户端使用telnet访问负载均衡的服务地址，但健康检查正常。
+`firewall.cpl`
 
-    Linux的rp\_filter特性用于实现反向过滤（即URPF）。它验证反向数据包的流向，以避免IP伪造攻击。但是该特性可能会和负载均衡底层LVS的策略路由产生冲突，导致访问出现异常。
+-   Linux 服务器上运行：
 
-    解决方法：确保后端ECS实例的系统配置文件中以下三个参数的值为0。编辑`/etc/sysctl.conf`后，执行`sysctl -p`使配置生效。
+`/etc/init.d/iptables stop`
+
+
+|
+|5|后端端口异常。| -   对于四层负载均衡，使用telnet测试有响应即为正常。
+
+示例：使用`telnet 10.11.192.1 80`来测试。
+
+-   对于七层负载均衡，HTTP状态码需要是200等代表正常的状态码，检验方法如下： 
+    -   Windows：直接在ECS上访问ECS的内网IP测试是否正常。
+
+示例：`http://10.11.192.1` 
+
+    -   Linux：使用`curl -I`命令查看状态是否为`HTTP/1.1 200 OK`。
+
+示例：`curl -I 10.11.192.1`
+
+
+ |
+|6|rp\_filter特性和负载均衡底层LVS的策略路由产生冲突，导致访问出现异常。| 1.  登录四层负载均衡后端添加的Linux系统的ECS实例。
+2.  编辑/etc/sysctl.conf文件，将系统配置文件中的以下三个参数值设置为0。
 
     ```
-     net.ipv4.conf.default.rp_filter = 0
-     net.ipv4.conf.all.rp_filter = 0
-     net.ipv4.conf.eth0.rp_filter = 0
+ net.ipv4.conf.default.rp_filter = 0
+ net.ipv4.conf.all.rp_filter = 0
+ net.ipv4.conf.eth0.rp_filter = 0
     ```
 
-3.  四层负载均衡后端Windows ECS参数配置错误。
+3.  执行`sysctl -p`命令，使配置生效。
 
-    对于四层负载均衡服务，目前不支持负载均衡后端ECS实例直接为客户端提供服务的同时，又作为所在负载均衡的后端服务器。
+ |
+|7|监听功能异常| 在服务器上执行以下命令，如果能看到10.11.192.1:80的监听信息，或者0.0.0.0:80的监听信息，说明这部分端口的监听正常。
 
-    因为这会概率性的出现相关访问请求被转发回同一台ECS的情形，造成数据访问形成环路，导致对应ECS访问负载均衡服务不通。
+-   Windows 服务器上运行：
 
-    解决方案：
+`netstat -ano | findstr :80`
 
-    1.  安装Windows回环网卡：右键单击**计算机** \> **属性** 。在控制面板主页，单击**设备管理器** \> **添加硬件** \> **安装我手动从列表选择的硬件** \> **显示所有设备** ，选择下图所示的设备进行安装。
+-   Linux 服务器上运行：
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4298/15421834873341_zh-CN.png)
+`netstat -anp | grep :80`
 
-    2.  启用Weak Host Model，执行以下命令查看所有网络接口的Idx。
 
-        ```
-        netsh interface ipv4 show interface
-        ```
+ |
+|8|创建负载均衡实例后，没有添加监听。|请配置监听，详情查看[配置监听](../../../../intl.zh-CN/历史文档/用户指南（旧版控制台）/监听/监听介绍.md#)。|
+|9|负载均衡通过域名访问不通，可能为用户域名解析错误导致。|-|
+|10|客户端本地网络或运营商中间链路异常。|从不同地域及不同网络环境，对负载均衡相应服务端口做访问测试。如果只有本地网络访问时出现异常，则判定是网络异常导致的问题，此时可以继续通过持续进行ping测试或MTR路由跟踪等手段做进一步排查分析。
 
-    3.  将所有网络接口分别设置`weakhostsend=enabled`, `weakhostsend=enabled`。比如设置Idx为12的网卡：
+|
+|11|客户端IP被云盾拦截。| 1.  在客户端网络环境下访问`http://ip.taobao.com`，获取客户端网络环境对应的公网IP。
+2.  将获取的IP配置为白名单，该操作将会对来自相应IP到负载均衡的所有访问全部放行。
 
-        ```
-        netsh interface ipv4 set interface 12 weakhostsend=enabled
-        netsh interface ipv4 set interface 12 weakhostreceive=enabled
-        ```
+**说明：** 该操作可能会带来安全风险，确保白名单中的IP不会对负载均衡进行恶意攻击。
 
-4.  客户端本地网络或运营商中间链路异常。
 
-    对于公网负载均衡服务，如果客户端网络异常，或者从客户端到负载均衡服务器之间的运营商网络出现异常，也会导致客户端无法访问负载均衡服务。
+ |
+|12|用户使用完高防IP之后切换回普通模式，未关闭访问控制白名单功能。|关闭ACL白名单.。|
+|如果还未能解决问题，请在提交工单时提供如下信息，以便我们更高效地协助您解决问题。-   负载均衡实例ID或负载均衡服务IP地址。
+-   访问`ip.taobao.com`时获取的客户端对应的公网IP。
+-   公网客户端对负载均衡IP长时间ping及MTR路由跟踪测试截图。
 
-    排查方法：从不同地域及不同网络环境，对负载均衡相应服务端口做访问测试。如果只有本地网络访问时出现异常，则判定是网络异常导致的问题，此时可以继续通过持续进行ping测试或MTR路由跟踪等手段做进一步排查分析。
-
-5.  客户端IP被云盾拦截。
-
-    对于公网负载均衡服务，如果客户端网络是共享网络（所有局域网内服务器通过有限的公网IP共享上网），同时其本地网络内有服务器因为中毒等因素向阿里云相关服务IP段进行扫描探测等恶意攻击。
-
-    解决方案：您可以参考如下步骤，通过将本地网络对应的公网IP加入负载均衡访问白名单来解决该问题：
-
-    1.  在客户端网络环境下访问http://ip.taobao.com，获取客户端网络环境对应的公网IP。
-    2.  将获取的IP配置为白名单，该操作将会对来自相应IP到负载均衡的所有访问全部放行。
-
-        **说明：** 该操作可能会带来安全风险，确保白名单中的IP不会对负载均衡进行恶意攻击。
-
-    如果还未能解决问题，请在提交工单时提供如下信息，以便我们更高效地协助您解决问题：
-
-    -   负载均衡实例ID或负载均衡服务IP地址。
-    -   访问ip.taobao.com时获取的客户端对应的公网IP。
-    -   公网客户端对负载均衡IP长时间ping及MTR路由跟踪测试截图。
+|
 
