--- a/cn.zh-CN/常见问题/如何排查500__502__504错误.md
+++ b/cn.zh-CN/常见问题/如何排查500__502__504错误.md
@@ -54,7 +54,7 @@
 
 6.  健康检查失败导致负载均衡出现502错误
 
-    关于健康检查失败，参考[健康检查异常排查](intl.zh-CN/常见问题/如何排查ECS实例异常.md#)进行排查。
+    关于健康检查失败，参考[健康检查异常排查](cn.zh-CN/常见问题/如何排查ECS实例异常.md#)进行排查。
 
     此外，未开启负载均衡的健康检查，同时服务器中Web服务无法正常处理HTTP请求，比如Web服务未运行，也会出现502错误。
 
@@ -103,7 +103,7 @@
 -   如果确认是后端服务器问题，请检查后端ECS Web服务器日志是否有相关错误，Web服务是否正常运行，确认Web访问逻辑是否有问题，卸载服务器上杀毒软件重启测试。
 -   检查后端ECS Linux操作系统的TCP内核参数是否配置正确。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4299/15445246273349_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4299/15447033883349_zh-CN.jpg)
 
 ## 提交工单 {#section_gyl_vcd_xdb .section}
 
