--- a/intl.zh-CN/新功能发布记录/新功能发布记录.md
+++ b/intl.zh-CN/新功能发布记录/新功能发布记录.md
@@ -136,10 +136,10 @@ TCP监听
 
  HTTPS监听
 
- |[WS/WSS协议支持常见问题](../../../../intl.zh-CN/扩展阅读/常见问题/WS__WSS协议支持常见问题.md#)|
+ |[WS/WSS协议支持常见问题](../../../../intl.zh-CN/常见问题/WS__WSS协议支持FAQ.md#)|
 |支持HTTP2协议|2018-02-01|全部| HTTPS监听
 
- |[HTTP/2协议支持常见问题](../../../../intl.zh-CN/扩展阅读/常见问题/HTTP__2协议支持常见问题.md#)|
+ |[HTTP/2协议支持常见问题](../../../../intl.zh-CN/常见问题/常见问题/HTTP__2协议支持常见问题.md#)|
 |支持查看实例级别云盾阈值|2017-11-30|全部| HTTPS监听
 
  HTTP监听
