--- a/intl.zh-CN/快速入门/教程概述.md
+++ b/intl.zh-CN/快速入门/教程概述.md
@@ -23,3 +23,7 @@
     如果您不需要负载均衡服务了，为避免不必要的计费，可以将其删除。
 
 
+## 视频教程 {#section_pcn_3bm_2gb .section}
+
+[负载均衡快速入门](../../../../intl.zh-CN/教程专区/负载均衡快速入门.md#)
+
