--- a/intl.zh-CN/常见问题/为什么无法访问负载均衡.md
+++ b/intl.zh-CN/常见问题/为什么无法访问负载均衡.md
@@ -8,8 +8,8 @@
 |--|----|----|
 |1|后端服务器无法访问SLB，对于四层负载均衡服务，目前不支持负载均衡后端ECS实例直接为客户端提供服务的同时，又作为负载均衡的后端服务器。|-|
 |2|健康检查异常。|健康检查方法请参见[四层监听（TCP/UDP）健康检查异常排查](intl.zh-CN/常见问题/如何排查四层监听（TCP__UDP）健康检查异常.md#)和[七层监听（HTTP/HTTPS）健康检查异常排查](intl.zh-CN/常见问题/如何排查七层监听（HTTP__HTTPS）健康检查异常.md#)。|
-|3|通过SLB搭建FTP、tftp、h323、sip等均不支持使用主动模式。| -   如果是Linux系统，您可以尝试配置22端口的转发，使用sftp连接传输数据。
--   支持通过EIP可见模式将EIP绑定到FTP服务器上对外提供FTP服务，配置详情请参见[使用EIP部署FTP服务器](../../../../intl.zh-CN/用户指南/使用EIP部署FTP服务器.md#)。
+|3|不支持通过SLB搭建FTP、tftp、h323和sip等| -   如果是Linux系统，您可以尝试配置22端口的转发，使用sftp连接传输数据。
+-   支持通过EIP可见模式将EIP绑定到FTP服务器上对外提供FTP服务，配置详情请参见[使用EIP部署FTP服务器](../../../../../intl.zh-CN/用户指南/使用EIP部署FTP服务器.md#)。
 
  |
 |4|服务器内网防火墙设置没有放行80端口。|可以选择执行如下命令，暂时关闭防火墙进行测试。-   Windows 服务器上运行：
@@ -61,7 +61,7 @@
 
 
  |
-|8|创建负载均衡实例后，没有添加监听。|请配置监听，详情查看[配置监听](../../../../intl.zh-CN/历史文档/用户指南（旧版控制台）/监听/监听介绍.md#)。|
+|8|创建负载均衡实例后，没有添加监听。|请配置监听，详情查看[配置监听](../../../../../intl.zh-CN/历史文档/用户指南（旧版控制台）/监听/监听介绍.md#)。|
 |9|负载均衡通过域名访问不通，可能为用户域名解析错误导致。|-|
 |10|客户端本地网络或运营商中间链路异常。|从不同地域及不同网络环境，对负载均衡相应服务端口做访问测试。如果只有本地网络访问时出现异常，则判定是网络异常导致的问题，此时可以继续通过持续进行ping测试或MTR路由跟踪等手段做进一步排查分析。
 
