--- a/intl.zh-CN/产品定价/按量计费.md
+++ b/intl.zh-CN/产品定价/按量计费.md
@@ -23,7 +23,7 @@
 
 公网实例费按照如下方式计费：
 
--   公网实例费的 = 实例费单价 x 实例保有时长
+-   公网实例费 = 实例费单价 × 实例保有时长
 
     实例保有时长是指从实例创建成功到释放之前的时间。
 
@@ -52,7 +52,7 @@
 
 公网流量费按照如下方式计费：
 
--   公网流量费 = 流量单价 x 使用时长
+-   公网流量费 = 流量单价 × 使用时长
 
     公网流量为公网出流量（下行流量），公网入流量（上行流量）不计入费用。
 
@@ -75,6 +75,21 @@
 
 ## 规格费 {#section_r13_y1h_j2b .section}
 
+性能保障型实例的三个关键指标如下，不同规格的实例，性能指标也不同。详情参见[性能保障型实例](../intl.zh-CN/用户指南/负载均衡实例/性能保障型实例.md#)。
+
+-   最大连接数-Max Connection
+
+    最大连接数定义了一个负载均衡实例能够承载的最大连接数量。当实例上的连接超过规格定义的最大连接数时，新建连接请求将被丢弃。
+
+-   每秒新建连接数-Connection Per Second \(CPS\)
+
+    每秒新建连接数定义了新建连接的速率。当新建连接的速率超过规格定义的每秒新建连接数时，新建连接请求将被丢弃。
+
+-   每秒查询数-Query Per Second \(QPS\)
+
+    每秒请求数是七层监听特有的概念，指的是每秒可以完成的HTTP/HTTPS的查询（请求）的数量。当请求速率超过规格所定义的每秒查询数时，新建连接请求将被丢弃。
+
+
 性能保障型实例规格费按使用量收取，即不论您选择何种规格，实例规格规格费均按照您实际使用的规格收取。如果实例的实际性能指标在两个规格之间，按照较大规格的费用计算（向上取整原则）。
 
 比如，您选择了超强型I \(slb.s3.large\) 规格（最大连接数1,000,000；CPS 500,000；QPS 500,00）。该实例在某小时内各项指标产生的实际峰值如下：
@@ -94,7 +109,7 @@
 
 以后每小时规格费均按照上述方式计算，如下图所示：
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13418/15414072553113_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13418/15476080643113_zh-CN.png)
 
 因此，按量付费的性能保障型实例具有自动弹性伸缩（或计费）的能力。您在购买时所选的规格，是性能的上限，比如您选择高阶型II \(slb.s3.medium\)，那么意味着，您的实例最大可以达到的规格上限就是高阶型II \(slb.s3.medium\)。
 
