--- a/cn.zh-CN/产品定价/按量计费.md
+++ b/cn.zh-CN/产品定价/按量计费.md
@@ -27,13 +27,13 @@
 
     实例使用时长是实例从创建到被释放的时间。
 
--   带宽费 = 当日带宽峰值（元/小时）× 使用时长
+-   带宽费 = 当日带宽峰值 × 带宽单价（元/小时）× 使用时长
 
     按带宽计费的公网SLB实例按小时计费，以日结算。使用时间不足一小时，按一小时计算。运行未满一日，按照当日实际使用小时数乘以当日开通的最高带宽单价计算。
 
     带宽费按实例创建时选择的带宽计费，但如果您在一个计费周期内，进行了带宽变更，按照最高带宽峰值计费。
 
-    比如，有一天您在华东1地域开通了一个2Mbps的公网实例，在开通当天的第20个小时变更实例带宽规格，更改为20Mbps，并且该实例在24小时内都未释放。根据产品定价，带宽规格在 1-5 Mbps 之间，每小时的带宽费用为 0.04 元；带宽规格在 5 Mbps 以上，每小时的带宽费用为 0.14 元。所以，当天的负载均衡实例费用为24 小时 x \(实例租用费 0.02 + 公网带宽费（0.04 x 5 +（20-5）x 0.14\)\)元/小时=24小时 x 2.32元/小时 = 55.68元
+    比如，有一天您在华东1地域开通了一个2Mbps的公网实例，在开通当天的第20个小时变更实例带宽规格，更改为20Mbps，并且该实例在24小时内都未释放。根据产品定价，带宽规格在 1-5 Mbps 之间，每小时的带宽费用为 0.04 元；带宽规格在 5 Mbps 以上，每小时的带宽费用为 0.14 元，全天按照当日开通的最高带宽（20Mbps）单价计算。所以，当天的负载均衡实例费用为24 小时 × \(实例租用费 0.02 + 公网带宽费（0.04 × 5 +（20-5）× 0.14\)\)元/小时=24小时 × 2.32元/小时 = 55.68元
 
 -   规格费：性能保障型实例规格费按量收取，即不论您选择的何种规格，实例规格规格费均会按照您实际使用的规格收取。详情参见[规格费](cn.zh-CN/产品定价/按量计费.md#section_a4g_ccs_wdb)。
 
@@ -81,6 +81,21 @@
 
 ## 规格费 {#section_a4g_ccs_wdb .section}
 
+性能保障型实例的三个关键指标如下，不同规格的实例，性能指标也不同。详情参见[性能保障型实例](../cn.zh-CN/用户指南/负载均衡实例/性能保障型实例.md#)。
+
+-   最大连接数-Max Connection
+
+    最大连接数定义了一个负载均衡实例能够承载的最大连接数量。当实例上的连接超过规格定义的最大连接数时，新建连接请求将被丢弃。
+
+-   每秒新建连接数-Connection Per Second \(CPS\)
+
+    每秒新建连接数定义了新建连接的速率。当新建连接的速率超过规格定义的每秒新建连接数时，新建连接请求将被丢弃。
+
+-   每秒查询数-Query Per Second \(QPS\)
+
+    每秒请求数是七层监听特有的概念，指的是每秒可以完成的HTTP/HTTPS的查询（请求）的数量。当请求速率超过规格所定义的每秒查询数时，新建连接请求将被丢弃。
+
+
 性能保障型实例规格费按使用量收取，即不论您选择何种规格，实例规格规格费均按照您实际使用的规格收取。如果实例的实际性能指标在两个规格之间，按照较大规格的费用计算（向上取整原则）。
 
 比如，您选择了超强型I \(slb.s3.large\) 规格（最大连接数1,000,000；CPS 500,000；QPS 500,00）。该实例在某小时内各项指标产生的实际峰值如下：
@@ -100,7 +115,7 @@
 
 以后每小时规格费均按照上述方式计算，如下图所示：
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13418/3113_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13418/15476081173113_zh-CN.png)
 
 因此，按量付费的性能保障型实例具有自动弹性伸缩（或计费）的能力。您在购买时所选的规格，是性能的上限，比如您选择高阶型II \(slb.s3.medium\)，那么意味着，您的实例最大可以达到的规格上限就是高阶型II \(slb.s3.medium\)。
 
