--- a/intl.zh-CN/产品限制/使用限制.md
+++ b/intl.zh-CN/产品限制/使用限制.md
@@ -1,11 +1,13 @@
 # 使用限制 {#concept_mfm_mp4_tdb .concept}
 
-负载均衡提供查询实例资源约束的API，详情参见[DescribeSlbQuotas](../../../../intl.zh-CN/API参考/查询配额/DescribeSlbQuotas.md#)。
+负载均衡提供查询实例资源约束的API，详情参见[DescribeSlbQuotas](../../../../../intl.zh-CN/API参考/查询配额/DescribeSlbQuotas.md#)。
 
 |资源|默认限制|
 |:-|:---|
 |**SLB实例限制**|
-|一个账号可创建的SLB实例数量|60|
+|一个账号可创建的SLB实例数量| 30
+
+ |
 |一个ECS实例可关联SLB的次数|50|
 |一个SLB实例可添加的后端服务器数量|200|
 |一个SLB实例可添加的监听数量|50|
