--- a/cn.zh-CN/快速入门/规划和准备.md
+++ b/cn.zh-CN/快速入门/规划和准备.md
@@ -49,11 +49,11 @@
 
 -   ECS实例的地域和可用区
 
-    确保ECS实例的地域和负载均衡实例的地域相同。此外，建议您将ECS部署在不同的可用区内，提高可用性，ECS实例的创建详情请参见[使用向导创建实例](../../../../../intl.zh-CN/用户指南/实例/创建实例/使用向导创建实例.md#)。
+    确保ECS实例的地域和负载均衡实例的地域相同。此外，建议您将ECS部署在不同的可用区内，提高可用性，ECS实例的创建详情请参见[使用向导创建实例](../../../../../../intl.zh-CN/用户指南/实例/创建实例/使用向导创建实例.md#)。
 
     本教程中，在**华东1**地域创建了两个ECS实例，为了便于辨识，将实例分别命名为ECS01和ECS02，如下图所示。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15696/154398761733206_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15696/154865418033206_zh-CN.png)
 
 -   应用配置
 
@@ -61,13 +61,13 @@
 
     -   在浏览器中输入ECS01实例绑定的弹性公网IP地址：
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4106/15439876172224_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4106/15486541802224_zh-CN.png)
 
     -   在浏览器中输入ECS02实例绑定的弹性公网IP地址：
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4106/15439876172231_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4106/15486541802231_zh-CN.png)
 
-    在ECS上部署好应用后，不需要再进行特别的配置。但如果您要配置一个四层监听（TCP协议或UDP协议），并且ECS使用的是Linux系统，确保net.ipv4.conf文件中的以下三个参数的值为零：
+    在ECS上部署好应用后，不需要再进行特别的配置。但如果您要配置一个四层监听（TCP协议或UDP协议），并且ECS使用的是Linux系统，确保ECS实例上/etc/sysctl.conf目录下net.ipv4.conf文件中的以下三个参数的值为零：
 
     ```
     
